src/test/resources/good/custom/002b-void-stuff-arrays.lat
void getVoid() {}

int main() {
    void [] a = new void [10];

    int i = 0;
    while (i < a.length) {
        a[i] = getVoid();
        printInt(a.length - i);
        i++;
    }

    for (void x : a) {
        printString("v");
    }

    return 0;
}
